--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "google/recaptcha": "^1.2",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "google/recaptcha": "^1.2"
+        "mcamara/laravel-localization": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
